@@ -59,6 +59,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18379: SSLSocket.getpeercert() returns CA issuer AIA fields, OCSP
+  and CRL distribution points.
+
 - Issue #18138: Implement cadata argument of SSLContext.load_verify_location()
   to load CA certificates and CRL from memory. It supports PEM and DER
   encoded strings.
